tests/snapshots/run_wpt_conformance__coreml_reduceSumSquare_float32_0D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum_square.https.any.js reduceSumSquare float32 0D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reduce_sum_square: Param 'x' has incorrect type for operator 'ios16.reduce_sum_square'. Expected { ...]>, ...]>, ...]>, [?, [?, [?, tensor<fp16, tensor<fp32, tensor<int32 }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([3, 63, 82, 66]);
  }

  nodes {
    [reduceSumSquareOutput] = reduceSumSquare(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceSumSquareOutput; }
}
